client/public/css/styles.css
.header--container {
    margin-top: 1em;
    text-align: center;
}

.header--text {
    font-size: 1.5rem;
    cursor: pointer;
    -webkit-user-select: none;
    user-select: none;
}

.nav-dropdown--container {
    position: absolute;
    top: 20px;
    right: 20px;
    -webkit-user-select: none;
    user-select: none;
}

.nav-dropdown--container .dropdown-toggle::after {
  display: none !important;
}


.nav-dropdown--menu-image {
    height: 2em;
    width: auto;
}

.gallery--criteria-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.gallery--container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.gallery--item {
    border: 1px solid #999;
    overflow-wrap: break-word;
    padding: 0.5em;
    margin: 1em;
    width: 12em;
    height: 14em;
    text-align: center;
}

.gallery--text {
    margin-bottom: 1em;
}

.gallery--name {
    display: block;
    font-size: .8rem;
    font-weight: bold;
    line-height: 1.2;
    height: 2.5em;
}

.gallery--description {
    display: block;
    font-size: .7rem;
    height: 2em;
}

.gallery--bid-container {
    display: flex;
    flex-direction: column;
}

.gallery--bid-price-container {
    display: flex;
}

.gallery--bid-price {
    flex: 1;
    font-size: .9rem;
}

.gallery--photo-container {
    height: 4em;
    width: 5em;
    margin: 0 auto 0.7em;
    overflow: hidden;
}

.gallery--photo {
    display: block;
    height: 5em;
    width: auto;
    margin: 0 auto;
    -webkit-user-select: none;
    user-select: none;
}

.sort--container {
    margin: 1em 1em;
}

.filter--container {
    margin: 1em 0;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    row-gap: 0.5em;
}

.filter--input {
    display: block;
    margin-left: 0.5em;
    margin-right: 0.5em;
}

.filter--button {
    display: block;
}

.pagination--container {
    user-select: none;
    -webkit-user-select: none;
}

.pagination--page-indicator {
    margin: 0 auto;
    width: 10em;
    text-align: center;
}

.pagination--button-container {
    display: flex;
    justify-content: center;
}

.pagination--button {
    margin: 0 1em;
    cursor: pointer;
}

.pagination--button.disabled {
    color: #777;
    cursor: default;
}

.pagination--button:not(.disabled):hover {
    color: #c55e4c
}

.clamp-lines__button {
    display: none;
}

.detail--container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 1em;
}

.detail--text {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.detail--title {
    text-align: center;
    font-weight: bold;
    font-size: 1.2rem;
}

.detail--description {
    text-align: center;
}

.detail--photo-container {
    text-align: center;
}

.detail--photo {
    height: 10em;
    width: auto;
    margin: 0.5em 0;
}

.detail--bid-container {
    text-align: center;
}

.detail--bid-price {
}

.detail--own-bid-indicator {
    font-weight: bold;
}

.detail--bid-form-grouper {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.5em;
    margin: 1em 0;
}

.detail--bid-input-row {
    display:flex;
    gap: 0.5em;
    -webkit-user-select: none;
    user-select: none;
}

.detail--bidding-countdown {
    font-size: 0.9rem;
    color: #999;
    text-align: center;
    margin-top: 0.5em;
    max-width: 23em;
}

.login--form-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 1em auto 0;
    width: 20em;
    row-gap: 1em;
    -webkit-user-select: none;
    user-select: none;
}

.autobidder-config--title {
    font-size: 1.2em;
    font-weight: bold;
    margin-bottom: 1em;
}

.autobidder-config--footer {
    display: flex;
    gap: 0.5em;
}

.autobidder-config--button {
    display: block;
}

.navbar--username-container {
    display: block !important;
    text-align: center !important;
}

.dashboard--title-container {
    text-align: center;
    font-weight: bold;
    font-size: 1.3em;
    margin: 1em 0;
}

.dashboard--header-info {
    font-style: italic;
}

.dashboard--item-row {
    cursor: pointer;
}

.dashboard--new-button-container {
    display: flex;
    justify-content: center;
    margin: 2em auto;
    -webkit-user-select: none;
    user-select: none;
}

.admin-detail--container {
}

.admin-detail--item-table {
}

.admin-detail--title {
    font-weight: bold;
    font-size: 1.2em;
    text-align: center;
    margin: 1em 0;
}

.admin-detail--description {
}

.admin-detail--photo-container {
    text-align: center;
}

.admin-detail--photo {
    height: 12em;
    width: auto;
    margin: 0.5em 0;
}

.admin-detail--preview-button {
    cursor: pointer;
    -webkit-user-select: none;
    user-select: none;
}

.admin-detail--show-bids-button {
    cursor: pointer;
    -webkit-user-select: none;
    user-select: none;
}

.admin-detail--action-buttons-container {
    display: flex;
    justify-content: center;
    margin: 2em auto;
    -webkit-user-select: none;
    user-select: none;
}

.admin-detail--action-button {
    margin: 0 1em;
}

.admin-edit--title {
    font-weight: bold;
    font-size: 1.2em;
    text-align: center;
    margin: 1em 0;
}

.admin-edit--form-container {
    display: flex;
    justify-content: center;
}

.admin-edit--form-wrapper {
    width: 35em;
}

.admin-edit--photo-label {
    margin-bottom: 0 !important;
}

.admin-edit--close-of-bids-label {
    margin-bottom: 0 !important;
}

.admin-edit--change-button {
    cursor: pointer;
    -webkit-user-select: none;
    user-select: none;
}

.admin-edit--datetime-container {
    display: flex;
    gap: 0.5em;
}

.admin-edit--action-buttons-container {
    display: flex;
    justify-content: center;
    margin: 2em auto;
    -webkit-user-select: none;
    user-select: none;
}

.admin-edit--action-button {
    margin: 0 1em;
}

.admin-new--title {
    font-weight: bold;
    font-size: 1.2em;
    text-align: center;
    margin: 1em 0;
}

.admin-new--form-container {
    display: flex;
    justify-content: center;
}

.admin-new--form-wrapper {
    width: 35em;
}

.admin-new--photo-label {
    margin-bottom: 0 !important;
}

.admin-new--close-of-bids-label {
    margin-bottom: 0 !important;
}

.admin-new--change-button {
    cursor: pointer;
    -webkit-user-select: none;
    user-select: none;
}

.admin-new--datetime-container {
    display: flex;
    gap: 0.5em;
}

.admin-new--action-buttons-container {
    display: flex;
    justify-content: center;
    margin: 2em auto;
    -webkit-user-select: none;
    user-select: none;
}

.admin-new--action-button {
    margin: 0 1em;
}

.bids-modal--item-row {
}

.offcanvas {
    width: 100% !important;
}

.u-ms-4 {
    margin-left: 0.4em;
    margin-right: 0.4em;
}

.u-red {
    color: red !important;
}

.u-small-text {
    font-size: 0.8em !important;
}

.u-max-width-35 {
    max-width: 35em !important;
}

